<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartSales</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="prompt_input_full_name">Full Name</string>
    <string name="prompt_input_mobile">Mobile</string>
    <string name="prompt_input_phone">Branch Tel.</string>
    <string name="prompt_input_branch">Branch</string>
    <string name="prompt_input_branch_tel">Branch Tel.</string>
    <string name="prompt_input_email">E-mail Address</string>
    <string name="complete">OK</string>
    <string name="title_activity_dealer_card">DealerCard</string>
    <string name="dealer_id">Dealer ID</string>
    <string name="virtual_reality">360° VR</string>
    <string name="style">STYLE</string>
    <string name="safety_convenience">SAFETY/CONVENIENCE</string>
    <string name="specification">SPECIFICATION</string>
    <string name="brochure">BROCHURE</string>
    <string name="estimate">ESTIMATE</string>
    <string name="comparing">COMPARING</string>
    <string name="catalog">CATALOGUE</string>
    <string name="performance">PERFORMANCE</string>
    <string name="title_activity_brand_story">Brand Story</string>
    <string name="title_activity_nde">NDE</string>
    <string name="title_activity_message_board">MessageBoard</string>
    <string name="title_activity_consultation">Consultation</string>
    <string name="brand_story">HYUNDAI MOTOR BRAND STORY</string>
    <string name="check_for_update">Check For Update</string>
    <string name="my_info">My Info</string>
    <string name="customer_manager">Customer Manager</string>
    <string name="survey">Survey</string>
    <string name="update_started">Standby</string>
    <string name="update_fetching">Downloading...</string>
    <string name="update_lately_version">All data has been updated</string>
    <string name="survey_text1">1. Did your dealer fully answer your questions kindly?</string>
    <string name="survey_text2">2. Do you think your dealer gave you enough car information?</string>
    <string name="survey_text3">3. Do you think this tablet app was helpful getting car information?</string>
    <string name="survey_text4">4. Was this tablet app convenient enough for you?</string>
    <string name="survey_text5">5. What is your overall rate for this tablet app?</string>
    <string name="survey_text6">6. What was your impression about this visitation?</string>
    <string name="survey_text7">7. Did this visit affect your desire to buy Hyundai cars?</string>
    <string name="survey_text8">8. How much is your interest about Hyundai brand?</string>
    <string name="survey_text9">9. Do you think that Hyundai brand is well known to people?</string>
    <string name="survey_text10">10. Would you recommend Hyundai car to others?</string>
    <string name="vehicle_update">The Vehicle Update</string>
    <string name="delete_account">Delete</string>
    <string name="desc_profile_result">Information is entered, the next will look like the above quote</string>
    <string name="fullscreen">FullScreen</string>
    <string name="prompt_input_memo">Please enter your memo...</string>
    <string name="model">Enter Model Name</string>
    <string name="model_of">\t\t\t\tModel Of Interest</string>
    <string name="age">Age</string>
    <string name="input_pencil">Please write using a tablet pen</string>
    <string name="title_activity_car_details">CarDetails</string>
    <string name="tel">Tel</string>
    <string name="mobile">Mobile</string>
    <string name="email_lower">E-mail</string>
    <string name="area">Area</string>
    <string name="title_activity_profile_full_screen">ProfileFullScreen</string>
    <string name="update_info">Please update your software first!</string>
    <string name="zero">0</string>
    <string name="edit">EDIT</string>
    <string name="send_email2">SEND E-MAIL</string>
    <string name="basic_trim">BASIC TRIM</string>
    <string name="option">OPTION</string>
    <string name="discount">DISCOUNT</string>
    <string name="email2">Email</string>
    <string name="total_price">Total Price</string>
    <string name="brand_story_heading">HYUNDAI MOTOR BRAND STORY</string>
    <string name="title_activity_validate">Validate</string>

</resources>
