<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/catalogueMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_icon"/>

    <com.hyundai.teli.smartsales.views.HTextView
        android:id="@+id/modelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Elantra"
        android:textColor="#84829B"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:textStyle="bold"
        android:background="@drawable/action_bar_bg"
        android:layout_toRightOf="@+id/catalogueMenu"
        android:layout_toEndOf="@+id/catalogueMenu"
        android:layout_above="@+id/frame_container"
        android:layout_alignParentTop="true"/>

    <HorizontalScrollView
        android:id="@+id/horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_bar_bg"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/modelName"
        android:layout_toEndOf="@+id/modelName"
        android:layout_above="@+id/frame_container">

            <android.support.v7.widget.Toolbar
                android:id="@+id/action_bar_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.hyundai.teli.smartsales.views.HTextView
                    android:id="@+id/virtualReality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/virtual_reality"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="30dp"/>

                <com.hyundai.teli.smartsales.views.HTextView
                    android:id="@+id/style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="30dp"/>

                <com.hyundai.teli.smartsales.views.HTextView
                    android:id="@+id/performance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/performance"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="30dp"/>

                <com.hyundai.teli.smartsales.views.HTextView
                    android:id="@+id/safetyConvenience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/safety_convenience"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:padding="15dp"
                    />

                <com.hyundai.teli.smartsales.views.HTextView
                    android:id="@+id/specification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specification"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="30dp"/>

                <com.hyundai.teli.smartsales.views.HTextView
                    android:id="@+id/estimate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estimate"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="30dp"/>

                <com.hyundai.teli.smartsales.views.HTextView
                    android:id="@+id/comparing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comparing"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="30dp"/>

                <com.hyundai.teli.smartsales.views.HTextView
                    android:id="@+id/catalog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catalog"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingRight="30dp"/>

            </android.support.v7.widget.Toolbar>

    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/catalogueMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </FrameLayout>

</RelativeLayout>