<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/settings_tab_unselected"
        android:id="@+id/linearLayout"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:id="@+id/check_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/tab_selector">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/update_selector"/>

            <com.hyundai.teli.smartsales.views.HTextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/check_for_update"
                android:padding="10dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/tab_selector">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/update_selector"/>

            <com.hyundai.teli.smartsales.views.HTextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/my_info"
                android:padding="10dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/customer_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/tab_selector">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/update_selector"/>

            <com.hyundai.teli.smartsales.views.HTextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/customer_manager"
                android:padding="10dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/tab_selector">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/update_selector"/>

            <com.hyundai.teli.smartsales.views.HTextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/survey"
                android:padding="10dp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/settings_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout"/>

    <FrameLayout
        android:id="@+id/registration_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout"
        android:visibility="gone"/>
</RelativeLayout>